eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Sickness__c.object
<CustomObject>
    <fields>
        <fullName>Absence_caused_by_an_injury_at_work__c</fullName>
        <label>Absence caused by an injury at work?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adjustments_to_work_required__c</fullName>
        <label>Adjustments to work required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_taking_any_medication__c</fullName>
        <label>Are you taking any medication?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correct_reporting_procedure_followed__c</fullName>
        <label>Correct reporting procedure followed?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_you_returned_to_work__c</fullName>
        <label>Day you returned to work</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Did_you_visit_the_hospital_or_GP__c</fullName>
        <label>Did you visit the hospital or GP?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_feel_fit_to_return_to_duties__c</fullName>
        <label>Do you feel fit to return to duties?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doctors_visit_date__c</fullName>
        <label>If so, on what date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_yes_was_the_accident_reported_to_HR__c</fullName>
        <label>If yes, was the accident reported to HR?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Injury_at_work_details__c</fullName>
        <label>If so, please give details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_day_you_worked__c</fullName>
        <label>Last day you worked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_days_off_sick__c</fullName>
        <label>Number of days off sick</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Please_give_details_medication__c</fullName>
        <label>Please give details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_absence__c</fullName>
        <label>Reason for absence</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff_name__c</fullName>
        <label>Staff name</label>
        <referenceTo>Staff_Member__c</referenceTo>
        <relationshipLabel>Sickness</relationshipLabel>
        <relationshipName>Sickness</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_you_left_the_workplace__c</fullName>
        <label>Time you left the workplace</label>
        <picklist>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_steps_have_you_taken_to_recover__c</fullName>
        <label>What steps have you taken to recover?</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_adjustments_info__c</fullName>
        <label>If yes, please give details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Sickness</label>
    <nameField>
        <label>Sickness Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sickness</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>